20070101 rzx.c: when rolling back, don't stop recording until we know
	 that the required snapshot exists.
20070102 tape.c,tape_block.[ch],tzx_read.c: stub support for TZX
	 "Generali[sz]ed Data" blocks (ID 0x19).
20070102 Makefile.am,internals.h,libspectrum.h.in,tape_accessors.{pl,txt},
	 tape_block.[ch], tape_set.pl, tzx_read.c: sufficient 0x19
	 functionality to allow tzxlist to do something with these blocks.
20070104 internals.h,libspectrum.h.in,symbol_table.c,tape_block.[ch],
	 tzx_read.c: next bit of 0x19 functionality.
20070104 libspectrum.h.in,symbol_table.c,tape_block.[ch]: symbol count of
	 0 => 256 symbols in table.
20070104 tzx_read.c: generalised data block pilot data comes before the
	 data symbol table.
20070104 tape_accessors.c,tape_block.h,tzx_read.c: read pilot data from
	 generalised data blocks.
20070104 Makefile.am,tape_accessors.txt,tape_block.h,tzx_read.c: read data
	 stream from generalised data blocks.
20070104 internals.h,tape_block.c,tzx_read.c: free generalised block data
	 on success (tested) and failure (not tested).
20070105 tape.c,tape_block.[ch]: start of playback code for generalised
	 data blocks.
20070105 tape.c,tape_accessors.txt,tape_block.h,tzx_read.c: more playback
	 code for generalised data blocks; handles symbol type 0 only.
20070106 libspectrum.h.in,tape.c: playback for other generalised data
	 symbol types.
20070107 tape.c: set flags when playing back generalised data symbols as
	 well as the pilot.
20070117 microdrive.c: fix up checksum calculation (patch #1637011)
         (Gergely Szasz).
20070119 libspectrum.h.in,doc/libspectrum.txt: tidy up and document in
	 preparation for a release.
20070120 doc/libspectrum.txt: document RZX iterators.
20070120 libspectrum.h.in,microdrive.c,doc/libspectrum.txt: tidy up and
	 document microdrive routines.
20070121 ChangeLog: bring up to date.
20070121 tzx_write.c: support for writing 0x19 blocks.
20070121 tzx_write.c: we now write TZX v1.20 files.